# AdobePlugin

./: .gitignore  .gitmodules  CMakeLists.txt  cmake-variants.json  video_plugin_version.h
core/: CMakeLists.txt  ark_types.h  utils.cpp  utils.h
core/filters/: ai_renderer_video_filter.cpp  ai_renderer_video_filter.h  plugin_defs.h  video_filter.h  video_filter_manager.cpp  video_filter_manager.h
core/host/: draw_helper.h  video_host.cpp  video_host.h  video_host_delegate.h
core/images/: ark_image.h  image_buffer.cpp  image_buffer.h  image_utils.cpp  image_utils.h
core/logging/: logger.cpp  logger.h  spdlogger.cpp  spdlogger.h
core/main_api_connection/: ark_plugin.h  main_api_connection.cpp  main_api_connection.h  plugin_json_parser.cpp  plugin_json_parser.h
core/parameters/: param_cache.cpp  param_cache.h  parameter.cpp  parameter.h
plugins/ae/: CMakeAEPluginInfo.plist.in  ae_draw_helper.cpp  ae_draw_helper.h  ae_host_delegate.cpp  ae_host_delegate.h  ae_main.cpp  ae_main.h  ae_video_image.cpp  ae_video_image.h  ae_video_image_base.cpp  ae_video_image_base.h  ae_video_image_checkout.cpp  ae_video_image_checkout.h  ai_renderer_filter_pipl.r
plugins/ofx/: CMakeAOFXPluginInfo.plist.in  ofx_host_delegate.cpp  ofx_host_delegate.h  ofx_main.cpp  ofx_video_image.cpp  ofx_video_image.h
tests/: image_tests.cpp  json_tests.cpp  param_tests.cpp
ui/prompt-mac-native/Prompt/: AppDelegate.swift  ViewController.swift
ui/prompt-mac-native/Prompt.xcodeproj/: project.pbxproj
ui/prompt-mac-native/Prompt.xcodeproj/project.xcworkspace/xcuserdata/stevedavis.xcuserdatad/: UserInterfaceState.xcuserstate
ui/prompt-mac-native/Prompt.xcodeproj/xcshareddata/xcschemes/: Prompt.xcscheme
ui/prompt-mac-native/Prompt.xcodeproj/xcuserdata/stevedavis.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ui/prompt-mac-native/Prompt.xcodeproj/xcuserdata/stevedavis.xcuserdatad/xcschemes/: xcschememanagement.plist
ui/prompt-mac-native/Prompt/Base.lproj/: Main.storyboard
ui/prompt-qt/: ReadMe.txt
ui/prompt-qt/prompt/: CMakeLists.txt  main.cpp  main.qml  prompt_dialog.cpp  prompt_dialog.h
ui/prompt-win-native/: promptApp.sln
ui/prompt-win-native/promptApp/: Resource.h  promptApp.cpp  promptApp.rc  promptApp.vcxproj  promptApp.vcxproj.filters
